# ReImagineX

./: .env.example  .gitignore  README.md  app.py  backlog.md  config.py  frontend.html  pyproject.toml  server.py  start.sh  state_manager.py  workflow.py  workflow_api.json
galeria_dados/: state.json
src/: config.py  frontend.html  manifest.json  server.py  state_manager.py  sw.js  workflow.py
